overflow hidden on x-axis and fixed padding on shop page

--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,8 @@
 body {
     height: 100vh;
     width: 100vw;
+    overflow: hidden;
+    overflow-y: scroll;
 }
 
 h1 {
@@ -281,7 +283,7 @@ h4 {
 /*Our Macarons*/
 #macarons-shop {
   height: 250%;
-  padding: 2% 5%;;
+  padding: 2% 0;
 }
 
 .shop-header {
